# fossil-type

./: README.md  meson.build
.github/ciimage/: Dockerfile.fedora
.github/workflows/: meson_ci.yml
code/logic/: adapter.c  attribute.c  lambda.c  limits.c  meson.build
code/logic/fossil/type/: adapter.h  attribute.h  converter.h  feature.h  framework.h  introspect.h  limits.h  tribool.h  types.h
code/tests/: meson.build
code/tests/cases/: test_calendar.c  test_feature.c  test_feature.cpp  test_limits.c  test_limits.cpp  test_tribool.c  test_tribool.cpp  test_types.c
